--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
 }
 
 header{
-	background-image:linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)), url('../images/2.jpg');
+	background-image:linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)), url('2.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
